<resources>

    <string name="app_name">Make My Run</string>
    <string name="menu_settings">Settings</string>
    <string name="google_rest_failed">Failed to read google REST response</string>
    <string name="json_parse_failed">Failed to parse google JSON response</string>
    <string name="url_format_failed">URL provided malformed</string>
    <string name="title_activity_main">Make My Run!</string>
    <string name="generate_button">Generate Run!</string>
    <string name="testlogo">testlogo</string>
    <string name="defaultStartTime">00:00:00</string>
    <string name="run_button">Run</string>
    <string name="stop_run_text">Stop Run</string>
    <string name="distance">00.0km</string>
    <string name="clockText">00:00:00</string>
    <string name="directions_loading_message">Requesting data from Google&#8230;</string>
    <string name="directions_finished_message">Got directions!</string>
    <string name="directions_failed_message">Failed to load data from Google</string>
    <string name="generate_route_button">Generate</string>
    <string name="start_point_button">Set start</string>
    <string name="end_point_button">Set end</string>
    <string name="title_activity_history">Running History!</string>
    <string name="history_btn">View history</string>
    <string name="stop_run_alert_dialog_message">Run is not completed, do you really want to stop?</string>
    <string name="stop_run_alert_dialog_title">Stopping run&#8230;</string>
    <string name="stop_run_alert_dialog_yes">Yes please</string>
    <string name="stop_run_alert_dialog_no">No way</string>
    <string name="save_run_success">Run was successfully saved</string>
    <string name="save_run_failed">Failed to save run :/</string>
</resources>