<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button
        android:id="@+id/startpointbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
		android:background="#FFFFFF"
        android:text="@string/start_point_button"
        android:padding="5dp" 
        android:drawableLeft="@drawable/pin" />
    
      <Button
        android:id="@+id/endpointbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
		android:background="#FFFFFF"
        android:text="@string/stop_run_text"
        android:padding="5dp" 
        android:drawableLeft="@drawable/pin" />
 
      <Button
        style="@style/MMRButtons"
       	android:id="@+id/generateRouteButton"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_centerHorizontal="true"
       	android:layout_marginBottom="10dp"
       	android:clickable="true"
       	android:layout_alignParentBottom="true"
       	android:text="@string/generate_route_button"
       	android:textSize="26dp"
       	android:padding="5dp"
          />
</RelativeLayout>